Bug 399231 - Kmail uses a low resolution icon for the notification
Summary: Kmail uses a low resolution icon for the notification
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-30 02:46 UTC by trmdi
Modified: 2018-10-18 14:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.9.3
Sentry Crash Report:


Attachments
kmail notification (82.35 KB, image/png)
2018-09-30 02:46 UTC, trmdi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description trmdi 2018-09-30 02:46:54 UTC
Created attachment 115320 [details]
kmail notification

SUMMARY
- When Kmail notification displays, it uses a low resolution icon.

OBSERVED RESULT
- Low resolution icon in Kmail notification
(In the screenshot I use another icon theme instead of Breeze, but the same result happens with Breeze)

EXPECTED RESULT
- A higher resolution icon is used

SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 5.13.5
KDE Frameworks Version: 5.49.0
Qt Version: 5.11.1
Comment 1 Daniel Vrátil 2018-10-18 13:28:36 UTC
We should probably call KNotification with icon name instead of passing an actual pixmap (or we should be more clever about picking the right pixmap size).
Comment 2 Nate Graham 2018-10-18 13:56:45 UTC
Kai told me that the point of passing a pixmap was to be able to show the sender's face (if known) in the notification. That would be nice to preserve, so maybe we can just pas a nice high-resolution pixmap here?
Comment 3 Laurent Montel 2018-10-18 14:12:54 UTC
Git commit aaea8aaf718f0b05ad20a157f1a1b78226996a61 by Laurent Montel.
Committed on 18/10/2018 at 14:12.
Pushed by mlaurent into branch 'Applications/18.08'.

Fix Bug 399231 - Kmail uses a low resolution icon for the notification

FIXED-IN: 5.9.3

M  +19   -9    agents/newmailnotifier/newmailnotifieragent.cpp
M  +1    -1    agents/newmailnotifier/newmailnotifieragent.h
M  +11   -7    agents/newmailnotifier/specialnotifierjob.cpp
M  +3    -2    agents/newmailnotifier/specialnotifierjob.h

https://commits.kde.org/kdepim-runtime/aaea8aaf718f0b05ad20a157f1a1b78226996a61
Comment 4 Nate Graham 2018-10-18 14:14:51 UTC
How's that for service!? :)