Fix Bug 399231 - Kmail uses a low resolution icon for the notification

FIXED-IN: 5.9.3
BUG: 399231